CategoryRepository és TakeoutRepository
