# takeout/src/main/java/hu/oe/takeout/takeout/generated/rest/model/Takeout.java
@@ -1,42 +1,0 @@
-package hu.oe.takeout.takeout.generated.rest.model;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.io.Serializable;
-import java.time.OffsetDateTime;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import org.hibernate.validator.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import jakarta.annotation.Generated;
-
-/**
- * Takeout
- */
-@lombok.Data
-@lombok.NoArgsConstructor
-@lombok.AllArgsConstructor
-@lombok.Builder
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.10.0")
-public class Takeout implements Serializable {
-
-  private static final long serialVersionUID = 1L;
-
-  private Integer id;
-
-  @hu.oe.takeout.validation.NameExists(message="error.customer.name.exists")
-  private String name;
-
-  private Integer price;
-
-  private Integer categoryId;
-
-}
-
